// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestComponent should be rendered with maximum props 1`] = `
<DocumentFragment>
  <label
    class="container uui-checkbox-container root uui-size-12 uui-control-mode-cell uui-color-primary uui-disabled uui-readonly uui-invalid"
  >
    <div
      class="uui-checkbox uui-checked"
    >
      <input
        aria-checked="mixed"
        aria-disabled="true"
        aria-readonly="true"
        aria-required="true"
        checked=""
        disabled=""
        readonly=""
        required=""
        tabindex="-1"
        type="checkbox"
      />
      <div
        class="container uui-icon uui-enabled"
      >
        <svg
          class=""
        />
      </div>
    </div>
    <div
      class="uui-input-label"
    >
      Test label
    </div>
  </label>
</DocumentFragment>
`;

exports[`TestComponent should render with minimum props 1`] = `
<DocumentFragment>
  <label
    class="container uui-checkbox-container root uui-size-18 uui-control-mode-form uui-color-primary -clickable"
  >
    <div
      class="uui-checkbox uui-checked"
    >
      <input
        aria-checked="true"
        checked=""
        tabindex="0"
        type="checkbox"
      />
      <div
        class="container uui-icon uui-enabled"
      >
        <svg
          class=""
        />
      </div>
    </div>
  </label>
</DocumentFragment>
`;
